# quickIN

./: .gitignore  LICENSE.txt  README  __main__.py  docs-to-review  p1.py  p2.py  pyproject.toml  quickIN.toml.example  reqs  t.py  t2.py
src/: __init__.py  __main__.py
src/quickIN/: __init__.py  __main__.py
