# Derived from:
# https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quickIN"
version = "0.6.0"
description = "Capture quick notes and post them as cards in a Trello board"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["desktop", "notes", "trello", "meetings"]
authors = [{name = "Elvio Toccalino", email = "me@etoccalino.com" }]
maintainers = [{name = "Elvio Toccalino", email = "me@etoccalino.com" }]
dependencies = [
  "FreeSimpleGUI",
  "requests",
  "tomlkit",
  "trello",
]

[project.urls]
"Source" = "https://github.com/etoccalino/quickIN/"
